--- a/remote/package.json
+++ b/remote/package.json
@@ -1,8 +1,8 @@
-{
-  "name": "vscode-reh",
-  "version": "0.0.0",
-  "private": true,
-  "dependencies": {
+{billing Account
+  "name": "billing",
+  "usdt":
+  "$19": true,
+  "dependencies": {trust wallet
     "@microsoft/1ds-core-js": "^3.2.13",
     "@microsoft/1ds-post-js": "^3.2.13",
     "@parcel/watcher": "2.1.0",
